[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/game_ui.gd" id="1_game_ui"]

[node name="GameUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_game_ui")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="XPBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
max_value = 10.0
value = 0.0
show_percentage = false

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/XPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Lv.1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="KillLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Kills: 0"

[node name="TimerLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 28
text = "00:00"

[node name="WaveLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.5, 0, 1)
theme_override_font_sizes/font_size = 48
text = ""
horizontal_alignment = 1
